# tra

./: .cvsignore  ChangeLog  Makefile.am  README  TODO  aclocal.m4  configure.in.in  subdirs  tra.kdevprj  tra.kdevses  tra.lsm  trashinfo.dtd
admin/: am_edit
libtra/: .cvsignore  Makefile.am  libtra.c  libtra.h  libtra_internal.h  misc.c  xml.c
tra/: .cvsignore  Makefile.am  main.c
tra/docs/: Makefile.in
tra/docs/en/: Makefile.in  index.sgml
website/: .webprj  index.html  style.css
